--- a/test/cdn_test.html
+++ b/test/cdn_test.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
-    <!-- <script src="https://unpkg.com/highlightjs-lean/dist/lean.min.js"></script> -->
-    <script src="/dist/lean.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/languages/go.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script src="https://unpkg.com/highlightjs-lean/dist/lean.min.js"></script>
     <script type="text/javascript">
         hljs.highlightAll();
     </script>
@@ -16,16 +13,5 @@
 <body>
     <pre><code class="language-lean">def well_founded_tactics.process_lex :
         tactic unit → tactic unit </code></pre>
-
-    <pre><code class="language-go">
-package main
-
-import "fmt"
-
-type rect struct {
-    width, height int
-}
-</code></pre>
 </body>
-
 </html>
